package http;

option cc_generic_services = true;

message HttpRequest {};
message HttpResponse {};

service HttpService {
  rpc Echo(HttpRequest) returns (HttpResponse);
  rpc AsynEcho(HttpRequest) returns (HttpResponse);
};